switched to the proper exec() version